--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
        
-        <img src="/assets/img/icons/android.png" alt="" height="70rem" width="80px">
+        <img src="/assets/img/logon.png" alt="" height="70rem" width="80px">
       </a>
 
       <nav id="navmenu" class="navmenu">
