Change service links to use '#' instead of URLs

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="icon">
                   <i class="bi bi-laptop"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="#" class="stretched-link">
                   <h3>Websites</h3>
                 </a>
                 <p>Custom website development and solutions tailored to your business needs.</p>
@@ -291,7 +291,7 @@
                 <div class="icon">
                   <i class="bi bi-hdd-network"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="#" class="stretched-link">
                   <h3>IT Support</h3>
                 </a>
                 <p>Reliable technical support, system maintenance, and IT solutions to keep your business running smoothly.</p>
@@ -304,7 +304,7 @@
                 <div class="icon">
                   <i class="bi bi-palette"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="#" class="stretched-link">
                   <h3>Design</h3>
                 </a>
                 <p>Creative and user-friendly web and app interfaces designed to engage your audience.</p>
@@ -317,7 +317,7 @@
                 <div class="icon">
                   <i class="bi bi-megaphone"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="#" class="stretched-link">
                   <h3>Marketing</h3>
                 </a>
                 <p>Digital marketing strategies to grow your brand and reach your target audience effectively.</p>
@@ -330,7 +330,7 @@
                 <div class="icon">
                   <i class="bi bi-gear"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="#" class="stretched-link">
                   <h3>Customization</h3>
                 </a>
                 <p>Tailored solutions and features to meet the exact needs of your business and projects.</p>
@@ -343,7 +343,7 @@
                 <div class="icon">
                   <i class="bi bi-speedometer2"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="#" class="stretched-link">
                   <h3>Optimization</h3>
                 </a>
                 <p>Enhance website performance, speed, and security to deliver the best user experience.</p>
