--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="/assets/img/rodv.png" rel="icon">
-  <link href="/assets/img/rodv.png"  rel="apple-touch-icon">
+  <link href="/assets/img/rodv1.png" rel="icon">
+  <link href="/assets/img/rodv1.png"  rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -134,7 +134,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
        
-        <img src="/assets/img/rodv.png" alt="" height="70rem" width="80px">
+        <img src="/assets/img/rodv1.png" alt="" height="70rem" width="80px">
       </a>
 
       <nav id="navmenu" class="navmenu">
